--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -5,16 +5,52 @@
 <title>Home page</title>
 </head>
 <body>
-<h1>Programer's Data</h1>
-<h2 th:text="${msg}"></h2>
-<form action="addProgrammer" method="post">
-<h3>Enter Programmer's Id</h3>
-<input type="text" name="id"/>
-<h3>Enter Programmer's Name</h3>
-<input type="text" name="name"/>
-<h3>Enter Programmer's Language</h3>
-<input type="text" name="language"/>
-<button type="submit">Add Programmer</button>
-</form>
+	<h2 th:text="${msg}"></h2>
+
+	<h1>----Add Programmer----</h1>
+	<form action="addProgrammer" method="post">
+
+		<h3>Enter Programmer's Name</h3>
+		<input type="text" name="name" />
+		<h3>Enter Programmer's Language</h3>
+		<input type="text" name="language" />
+		<button type="submit">Add Programmer</button>
+	</form>
+	<hr>
+
+	<h1>----Find Programmer By ID----</h1>
+	<form action="findById" method="post">
+		<h3>Enter Programmer's ID to find</h3>
+		<input type="text" name="id" />
+		<button type="submit">Find by ID</button>
+	</form>
+	<hr>
+	<h1>----Find Programmer By Language----</h1>
+	<form action="findByLanguage" method="post">
+		<h3>Enter Programmer's ID to find</h3>
+		<input type="text" name="language" />
+		<button type="submit">Find by Language</button>
+	</form>
+	<hr>
+
+	<h1>----Delte Programmer By ID----</h1>
+	<form action="deleteById" method="Get">
+		<h3>Enter Programmer's ID to delete</h3>
+		<input type="text" name="id" />
+		<button type="submit">delete by ID</button>
+	</form>
+	<hr>
+
+	<h1>----Update Programmer By ID----</h1>
+	<form action="updateProgrammer" method="post">
+
+		<h3>Enter Programmer's Id</h3>
+		<input type="text" name="id" />
+		<h3>Enter Programmer's Name</h3>
+		<input type="text" name="name" />
+		<h3>Enter Programmer's Language</h3>
+		<input type="text" name="language" />
+		<button type="submit">Update Programmer</button>
+	</form>
 </body>
 </html>
